# haskell-baskell

./: .gitignore  CHANGELOG.md  README.md  build  haskell-discord.cabal  main.hs  req
app/: Main.hs
