cabal-version:      2.4
name:               haskell-discord
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Sondren1288
maintainer:         sondrenordmoen@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haskell-discord
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
     base >= 4.13 && < 5
     , calamity >= 0.7.1.0
     , optics >= 0.4.1 && < 0.5
     , lens >= 5.1 && < 6
     , di-polysemy ^>= 0.2
     , di >= 1.3 && < 2
     , df1 >= 0.3 && < 0.5
     , di-core ^>= 1.0.4
     , polysemy >= 1.5 && <2
     , polysemy-plugin >= 0.3 && <0.5
     , stm >= 2.5 && <3
     , text-show >= 3.8 && <4
     , unbounded-delays >= 0.1
     , text >= 1.2.5.0
     , ghc-boot >= 9.2.5
     , authenticate-oauth >= 1.7
     , mtl >= 2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
